--- a/env/.env.pipeline
+++ b/env/.env.pipeline
@@ -10,3 +10,4 @@ PIPELINE_SERVICE_CLIENT_HEALTH_CHECK_INTERVAL: 300
 SERVER_HOST_API_URL: "http://openmetadata-server:8585/api"
 PIPELINE_SERVICE_CLIENT_VERIFY_SSL: "no-ssl"
 # PIPELINE_SERVICE_CLIENT_SSL_CERT_PATH: ""
+AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=mysql+mysqldb://airflow_user:airflow_pass@mysql:3306/airflow_db
